WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157925
Web Inspector: CRASH when closing a page while element selection mode is enabled via Develop menu
https://bugs.webkit.org/show_bug.cgi?id=157925
Summary
Web Inspector: CRASH when closing a page while element selection mode is enab...
Blaze Burg
Reported
2016-05-19 14:36:42 PDT
Missing null check.
Attachments
Proposed Fix
(1.81 KB, patch)
2016-05-19 14:40 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2016-05-19 14:37:27 PDT
<
rdar://problem/26259618
>
Blaze Burg
Comment 2
2016-05-19 14:40:18 PDT
Created
attachment 279434
[details]
Proposed Fix
Joseph Pecoraro
Comment 3
2016-05-19 14:58:23 PDT
Comment on
attachment 279434
[details]
Proposed Fix Oops. r=me
WebKit Commit Bot
Comment 4
2016-05-19 15:19:09 PDT
Comment on
attachment 279434
[details]
Proposed Fix Clearing flags on attachment: 279434 Committed
r201190
: <
http://trac.webkit.org/changeset/201190
>
WebKit Commit Bot
Comment 5
2016-05-19 15:19:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug