Web Inspector: CRASH when closing a page while element selection mode is enabled via Develop menu https://bugs.webkit.org/show_bug.cgi?id=157925 <rdar://problem/26259618>

Reviewed by Joseph Pecoraro.

* WebProcess/WebCoreSupport/WebInspectorClient.cpp:
(WebKit::WebInspectorClient::elementSelectionChanged):
Null-check m_page->inspector() since it will return nullptr if the page
is closed but not yet destructed. This is triggered by teardown code
in InspectorDOMAgent::willDestroyFrontendAndBackend.


Canonical link: https://commits.webkit.org/176040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201190 268f45cc-cd09-0410-ab3c-d52691b4dbfc