Source/WebKit2/WebProcess/WebCoreSupport/WebInspectorClient.cpp
@@ -194,7 +194,8 @@ void WebInspectorClient::didSetSearchingForNode(bool enabled)
 
 void WebInspectorClient::elementSelectionChanged(bool active)
 {
-    m_page->inspector()->elementSelectionChanged(active);
+    if (m_page->inspector())
+        m_page->inspector()->elementSelectionChanged(active);
 }
 
 void WebInspectorClient::pageOverlayDestroyed(PageOverlay&)
